2012-07-30  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add a "deletedata" subcommand (limitation: only for xy-plots)
	* plotpriv.tcl: Implement a first version of a deletedata subcommand
	* plotchart.man: Document the deletedata subcommand

2012-05-18  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotpack.tcl: Correct regular expression to extract the canvas name (it was too greedy; patch by Frank)
	* plotpriv.tcl: Remove overwritten version of GetCanvas (the proper one is in plotpack.tcl)
        * plotchart.tcl: Introduce the private procedure CopyScalingData to remove an incompatibility with
                         previous versions

2012-05-14  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotaxis.tcl: Correct drawing of time-axis - labels were sometimes drawn to the right
	                of the whole plot (Note: same problem can occur with other types of axis,
	                but may be less likely in that context)

2012-05-07  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add a subtitle command (for the moment: XY-plots only)
	* plotpriv.tcl: Implement a subtitle command
	* plotconfig.tcl: Implement the configuration options for the subtitle

2012-04-23  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* xyplot.tcl: Remove explicit sourcing of "plotchart.tcl" - left-over from testing

2012-04-20  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Repair setZoomPan and introduce new axis configuration
	                 routine (for time-axis). Introduce -justify for axis labels
	* plotaxis.tcl: New axis configuration routine so that date/time format
	                works properly
	* plotconfig.tcl: Default for new axis option -justify
	* slidercnv.tcl: Add setZoomPan command for easy testing, use grid for resizing
	* texttxplot.tcl: Add change of date/time format for testing

2012-03-22  Arjen Markus  <arjenmarkus@users,sourceforge.net>